--- a/index.html
+++ b/index.html
@@ -40,137 +40,65 @@ Hambuger Menu for Mobile  -->
 
 <article class="ui grid">
   <section class="sixteen wide column">
-   <h1>Net Neutrality</h1>
-  </section>
- 
-  <div class="sixteen wide column">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  </div>
- 
-  <div class="sixteen wide column">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
+   <h1>Net Neutrality </h1>
+   <h3>and why you should pay attention to it</h3>
   
   <div class="sixteen wide column">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-  <div class="sixteen wide column">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
+    <p>Net neutrality is such a fickle issue. There are a lot of components and a lot a politics involved. You have seen it on the internet, you have listened to it on the news, and even our president Barack Obama had something to say about it. </p>
 
-  <section class="sixteen wide column">
-    <h2>What is Net Neutrality?</h2>
-  </section>
-  
-  <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>  
+<iframe width="560" height="315" src="//www.youtube.com/embed/uKcjQPVwfDk" frameborder="0" allowfullscreen></iframe>
+  </div>
  
- <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div> 
-
   <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div> 
+<h2>But what is net neutrality?</h3>
+<h3>Everyone should have equal opportunity access to participate.</h3>
+<p>This is the basis of net neutrality that most people understand. This is the argument that people will use when fighting for net neutrality. And many groups and agencies agree with the general public, that the <strong> internet should be free and open.</strong> </p>
+
+<p>A free and open internet would mean basically how the internet exists now. This means that the full resources of the internet are easily accessible to individuals and companies. Basically, <strong> you do not have to foot the bill for your Netflix, gaming, ect.</strong> This is the age where data has to fight for their own rights too, apparently.  </p>
+  </div>
+ 
+</section>
+ 
   
     <section class="sixteen wide column">
     <h2>Why does it affect me?</h2>
-  </section>
+ 
   
   <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   <p> As a 20-30 something year old, a large part of what you do it based around the internet. We check our Twitter, Facebook, Instagram, and practically live off of netflix and youtube. Who needs TV anymore, right? Well if Net neutrality were to go away, you would be paying for the internet as well as certain services you couldn't live without. This would be those expensive to maintain services exactly like Netflix and Facebook and Google searching. </p>
+   <p> This idea isn't completely new. This same sort of idea is already used for some TV companies (have you ever heard of Game of Thrones?) and for the most part these services are not argued against. People are so upset about a tiered internet system <strong>because the internet has always been free and open.</strong> </p>
+
+   <p> This could also affect designers. We want our work to be seen and this is less likely to happen because the internet would be a tiered off service. The information would see less people.  </p>
   </div>  
- 
- <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div> 
-
-  <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div> 
-
+ </section>
     <section class="sixteen wide column">
     <h2>Who is involved?</h2>
-  </section>
+
   
   <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>  
- 
- <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div> 
+   <p>There are a few major sides to this game. First of all, you have the general public who in general have shown their <a href="https://www.battleforthenet.com/">outcry against</a> the idea of a tiered internet. You also have the <a href="http://www.fcc.gov/what-we-do"> FCC</a>, the <a href="http://internetassociation.org/">Internet association</a> (which include companies like google, facebook, netflix, Amazon, ect.), and parts of congress who also argree that the internet should be free and open and fall under the title II act which would secure neutrality. These entities fear that broadband services could throttle services that don't pay premium.</p>
 
+   <p>Finally we have the corporate part of America who believes that net neutrality would be a bad thing. This includes Time Warner, Comcast, Verizon, AT&T, Intel, IBM and more. They believe tightened rules by the FCC would lead to many lost investments and would cause billions of dollars in loss. They believe that internet "toll roads" would provide better service to companie that can support their higher traffic volums, not slow everyone one else down. You can read that interesting article <a href="http://www.cnet.com/news/makers-of-internet-infrastructure-warn-against-more-regulation/">here</a>.</p>
+  
+ 
+ <h3>Keep in mind: Net Neutrality is an ever charnging subject and entities who believe one thing now can and will change their minds tomorrow. In this moment FCC guidelines may be delayed until <a href="http://www.cnet.com/news/fcc-may-delay-release-of-net-neutrality-rules-until-2015/">early 2015</a>. </h3>
+ </section>
+ </div> 
+   <section class="sixteen wide column">
+    <h2>More Information</h2>
+
+  
   <div class="sixteen wide column">
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div> 
+   <ul>
+    <li><a href="https://www.battleforthenet.com/">Battle for the Net</a>   </li>
+    <li><a href="http://theoatmeal.com/blog/net_neutrality">The Oatmeal</a></li>
+    <li><a href="http://internetassociation.org/">The Internet Association</a></li>
+    <li><a href="http://en.wikipedia.org/wiki/Net_neutrality">Net Neutrality Wikipedia</a></li>
+    <li><a href="http://www.whitehouse.gov/net-neutrality">Net Neutrality: President Obama's Plan for a Free and Open Internet</a></li>
+    <li><a href="http://www.fcc.gov/what-we-do">FCC</a></li>
+   </ul>
+ </section>
+ </div> 
 
 </article>
 </div>
