--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 Hambuger Menu for Mobile  -->
   <div class="ui menu">
   <a class="active item">
-    <i class="home icon"></i> Home
+     Home
   </a>
   <a class="item">
-    <i class="mail icon"></i> What is Net Neutrality
+    What is Net Neutrality
   </a>
   <a class="item">
-    <i class="mail icon"></i> Why does it affect me?
+     Why does it affect me?
   </a>
   <a class="item">
-    <i class="mail icon"></i> Who is involved
+     Who is involved
   </a>
 </div>
 
@@ -39,56 +39,60 @@ Hambuger Menu for Mobile  -->
 <!-- What -->
 
 <article class="ui grid">
-  <section class="sixteen wide column">
+  <section class="sixteen wide column top">
    <h1>Net Neutrality </h1>
    <h3>and why you should pay attention to it</h3>
   
-  <div class="sixteen wide column">
+  
     <p>Net neutrality is such a fickle issue. There are a lot of components and a lot a politics involved. You have seen it on the internet, you have listened to it on the news, and even our president Barack Obama had something to say about it. </p>
 
-<iframe width="560" height="315" src="//www.youtube.com/embed/uKcjQPVwfDk" frameborder="0" allowfullscreen></iframe>
-  </div>
- 
-  <div class="sixteen wide column">
-<h2>But what is net neutrality?</h3>
-<h3>Everyone should have equal opportunity access to participate.</h3>
-<p>This is the basis of net neutrality that most people understand. This is the argument that people will use when fighting for net neutrality. And many groups and agencies agree with the general public, that the <strong> internet should be free and open.</strong> </p>
+      <!-- <iframe width="560" height="315" src="//www.youtube.com/embed/uKcjQPVwfDk" frameborder="0" allowfullscreen></iframe> -->
+  </section>
+  
+  <section class="sixteen wide column one">
+    <h2>But what is net neutrality?</h2>
+    
 
-<p>A free and open internet would mean basically how the internet exists now. This means that the full resources of the internet are easily accessible to individuals and companies. Basically, <strong> you do not have to foot the bill for your Netflix, gaming, ect.</strong> This is the age where data has to fight for their own rights too, apparently.  </p>
-  </div>
- 
-</section>
+    <blockquote> "You can’t regulate the speed of ideas. The Internet is one of the greatest engines for economic growth and prosperity the world has ever known."
+    </blockquote>
+
+    <p> Net Neutrality has a couple of things going for it. First and foremost, Net Neutrality encourages all data to be treated equally, on both the user's end and the company who created the website. Secondly, that information should be easy to access and create. And finally, that the internet should be a competitive service with competitive prices.  Many groups and agencies agree that the <strong> internet should be free and open.</strong> </p>
+
+    <p>A free and open internet would mean basically how the internet exists now. This means that the full resources of the internet are easily accessible to individuals and companies. Basically, <strong> you do not have to foot the bill for your Netflix, gaming, ect.</strong> These companies currently do that for us.</p>
+
+    <p>The current fight is about Title II, a guideline that guided how telecommunication companies were required to provide equal access to customers. This Title is currenlty being debated and re-written to include broadband companies as well. This is why the cable companies are not happy. </p>
+  </section>
  
   
-    <section class="sixteen wide column">
-    <h2>Why does it affect me?</h2>
- 
-  
-  <div class="sixteen wide column">
-   <p> As a 20-30 something year old, a large part of what you do it based around the internet. We check our Twitter, Facebook, Instagram, and practically live off of netflix and youtube. Who needs TV anymore, right? Well if Net neutrality were to go away, you would be paying for the internet as well as certain services you couldn't live without. This would be those expensive to maintain services exactly like Netflix and Facebook and Google searching. </p>
-   <p> This idea isn't completely new. This same sort of idea is already used for some TV companies (have you ever heard of Game of Thrones?) and for the most part these services are not argued against. People are so upset about a tiered internet system <strong>because the internet has always been free and open.</strong> </p>
+  <section class="sixteen wide column two">
+    
+   <h2>Why does it affect me?</h2>
+   
+   <p> As a 20-30 something year old, a large part of what you do it based around the internet. We check our Twitter, Facebook, Instagram, and practically live off of netflix and youtube. Who needs TV anymore, right? Well if Net neutrality were to go away, you could be paying for the internet as well as certain services you couldn't live without. This would be those expensive to maintain services exactly like Netflix and Facebook and Google searching. </p>
+   
+   <p> This idea isn't new. This same idea is already used for some TV companies (have you ever heard of Game of Thrones?) and for the most part these services are not argued against. People are so upset about a tiered internet system <strong>because the internet has always been free and open.</strong> </p>
 
    <p> This could also affect designers. We want our work to be seen and this is less likely to happen because the internet would be a tiered off service. The information would see less people.  </p>
-  </div>  
- </section>
-    <section class="sixteen wide column">
-    <h2>Who is involved?</h2>
+  
+  </section>
+
+  <section class="sixteen wide column three">
+   <h2>Who is involved?</h2>
 
   
-  <div class="sixteen wide column">
+   <div class="sixteen wide column">
+   
    <p>There are a few major sides to this game. First of all, you have the general public who in general have shown their <a href="https://www.battleforthenet.com/">outcry against</a> the idea of a tiered internet. You also have the <a href="http://www.fcc.gov/what-we-do"> FCC</a>, the <a href="http://internetassociation.org/">Internet association</a> (which include companies like google, facebook, netflix, Amazon, ect.), and parts of congress who also argree that the internet should be free and open and fall under the title II act which would secure neutrality. These entities fear that broadband services could throttle services that don't pay premium.</p>
 
    <p>Finally we have the corporate part of America who believes that net neutrality would be a bad thing. This includes Time Warner, Comcast, Verizon, AT&T, Intel, IBM and more. They believe tightened rules by the FCC would lead to many lost investments and would cause billions of dollars in loss. They believe that internet "toll roads" would provide better service to companie that can support their higher traffic volums, not slow everyone one else down. You can read that interesting article <a href="http://www.cnet.com/news/makers-of-internet-infrastructure-warn-against-more-regulation/">here</a>.</p>
   
  
- <h3>Keep in mind: Net Neutrality is an ever charnging subject and entities who believe one thing now can and will change their minds tomorrow. In this moment FCC guidelines may be delayed until <a href="http://www.cnet.com/news/fcc-may-delay-release-of-net-neutrality-rules-until-2015/">early 2015</a>. </h3>
- </section>
- </div> 
-   <section class="sixteen wide column">
+   <h3>Keep in mind: Net Neutrality is an ever charnging subject and entities who believe one thing now can and will change their minds tomorrow. In this moment FCC guidelines may be delayed until <a href="http://www.cnet.com/news/fcc-may-delay-release-of-net-neutrality-rules-until-2015/">early 2015</a>. </h3>
+   </section>
+ 
+   <section class="sixteen wide column four">
     <h2>More Information</h2>
 
-  
-  <div class="sixteen wide column">
    <ul>
     <li><a href="https://www.battleforthenet.com/">Battle for the Net</a>   </li>
     <li><a href="http://theoatmeal.com/blog/net_neutrality">The Oatmeal</a></li>
@@ -97,11 +101,12 @@ Hambuger Menu for Mobile  -->
     <li><a href="http://www.whitehouse.gov/net-neutrality">Net Neutrality: President Obama's Plan for a Free and Open Internet</a></li>
     <li><a href="http://www.fcc.gov/what-we-do">FCC</a></li>
    </ul>
+ 
  </section>
- </div> 
-
-</article>
+ 
 </div>
+</article>
+
 <div id="footer">
 </div>
   
