--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Net Neutrality</title>
 
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
+ <link href="http://fonts.googleapis.com/css?family=Oswald:700|Droid+Serif:400,700italic" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
@@ -41,7 +42,7 @@ Hambuger Menu for Mobile  -->
 <article class="ui grid">
   <section class="sixteen wide column top">
    <h1>Net Neutrality </h1>
-   <h3>and why you should pay attention to it</h3>
+   <h2>and why you should pay attention to it</h2>
   
   
     <p>Net neutrality is such a fickle issue. There are a lot of components and a lot a politics involved. You have seen it on the internet, you have listened to it on the news, and even our president Barack Obama had something to say about it. </p>
@@ -50,10 +51,10 @@ Hambuger Menu for Mobile  -->
   </section>
   
   <section class="sixteen wide column one">
-    <h2>But what is net neutrality?</h2>
+    <h1>But what is net neutrality?</h1>
     
 
-    <blockquote> "You can’t regulate the speed of ideas. The Internet is one of the greatest engines for economic growth and prosperity the world has ever known."
+    <blockquote> <h2>"You can’t regulate the speed of ideas. The Internet is one of the greatest engines for economic growth and prosperity the world has ever known."</h2>
     </blockquote>
 
     <p> Net Neutrality has a couple of things going for it. First and foremost, Net Neutrality encourages all data to be treated equally, on both the user's end and the company who created the website. Secondly, that information should be easy to access and create. And finally, that the internet should be a competitive service with competitive prices.  Many groups and agencies agree that the <strong> internet should be free and open.</strong> </p>
@@ -66,7 +67,7 @@ Hambuger Menu for Mobile  -->
   
   <section class="sixteen wide column two">
     
-   <h2>Why does it affect me?</h2>
+   <h1>Why does it affect me?</h1>
    
    <p> As a 20-30 something year old, a large part of what you do it based around the internet. We check our Twitter, Facebook, Instagram, and practically live off of netflix and youtube. Who needs TV anymore, right? Well if Net neutrality were to go away, you could be paying for the internet as well as certain services you couldn't live without. This would be those expensive to maintain services exactly like Netflix and Facebook and Google searching. </p>
    
@@ -77,21 +78,19 @@ Hambuger Menu for Mobile  -->
   </section>
 
   <section class="sixteen wide column three">
-   <h2>Who is involved?</h2>
+   <h1>Who is involved?</h1>
 
-  
-   <div class="sixteen wide column">
    
    <p>There are a few major sides to this game. First of all, you have the general public who in general have shown their <a href="https://www.battleforthenet.com/">outcry against</a> the idea of a tiered internet. You also have the <a href="http://www.fcc.gov/what-we-do"> FCC</a>, the <a href="http://internetassociation.org/">Internet association</a> (which include companies like google, facebook, netflix, Amazon, ect.), and parts of congress who also argree that the internet should be free and open and fall under the title II act which would secure neutrality. These entities fear that broadband services could throttle services that don't pay premium.</p>
 
    <p>Finally we have the corporate part of America who believes that net neutrality would be a bad thing. This includes Time Warner, Comcast, Verizon, AT&T, Intel, IBM and more. They believe tightened rules by the FCC would lead to many lost investments and would cause billions of dollars in loss. They believe that internet "toll roads" would provide better service to companie that can support their higher traffic volums, not slow everyone one else down. You can read that interesting article <a href="http://www.cnet.com/news/makers-of-internet-infrastructure-warn-against-more-regulation/">here</a>.</p>
   
  
-   <h3>Keep in mind: Net Neutrality is an ever charnging subject and entities who believe one thing now can and will change their minds tomorrow. In this moment FCC guidelines may be delayed until <a href="http://www.cnet.com/news/fcc-may-delay-release-of-net-neutrality-rules-until-2015/">early 2015</a>. </h3>
+   <h2>Keep in mind: Net Neutrality is an ever charnging subject and entities who believe one thing now can and will change their minds tomorrow. In this moment FCC guidelines may be delayed until <a href="http://www.cnet.com/news/fcc-may-delay-release-of-net-neutrality-rules-until-2015/">early 2015</a>. </h2>
    </section>
  
    <section class="sixteen wide column four">
-    <h2>More Information</h2>
+    <h1>More Information</h1>
 
    <ul>
     <li><a href="https://www.battleforthenet.com/">Battle for the Net</a>   </li>
