--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@ Hambuger Menu for Mobile  -->
    <h1>Net Neutrality </h1>
    <h2>and why you should pay attention to it</h2>
   
-  
-    <p>Net neutrality is such a fickle issue. There are a lot of components and a lot a politics involved. You have seen it on the internet, you have listened to it on the news, and even our president Barack Obama had something to say about it. </p>
+    <p> There are a lot of components and a lot a politics involved in Net Neutrality. You have seen it on the internet, you have listened to it on the news, and even our president Barack Obama had something to say about it. </p>
 
       <!-- <iframe width="560" height="315" src="//www.youtube.com/embed/uKcjQPVwfDk" frameborder="0" allowfullscreen></iframe> -->
   </section>
@@ -57,6 +56,7 @@ Hambuger Menu for Mobile  -->
     <blockquote> <h2>"You can’t regulate the speed of ideas. The Internet is one of the greatest engines for economic growth and prosperity the world has ever known."</h2>
     </blockquote>
 
+    <img src="img/infographic1.svg" alt="the internet now and in the future">
     <p> Net Neutrality has a couple of things going for it. First and foremost, Net Neutrality encourages all data to be treated equally, on both the user's end and the company who created the website. Secondly, that information should be easy to access and create. And finally, that the internet should be a competitive service with competitive prices.  Many groups and agencies agree that the <strong> internet should be free and open.</strong> </p>
 
     <p>A free and open internet would mean basically how the internet exists now. This means that the full resources of the internet are easily accessible to individuals and companies. Basically, <strong> you do not have to foot the bill for your Netflix, gaming, ect.</strong> These companies currently do that for us.</p>
