addded mobile menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Net Neutrality</title>
 
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
+  <link rel="stylesheet" href="css/slicknav.css" />
  <link href="http://fonts.googleapis.com/css?family=Oswald:700|Droid+Serif:400,700italic" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
@@ -28,7 +29,7 @@
 
   <!-- Menu
 Hambuger Menu for Mobile  -->
-  <div class="ui menu">
+  <div class="ui menu" id="menu">
   <a class="item" href="#home">
      Home
   </a>
@@ -149,6 +150,7 @@ Hambuger Menu for Mobile  -->
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
+  <script src="js/slicknav.js"></script>
   <script src="js/scripts.js"></script>
 
 </body>
