--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ Hambuger Menu for Mobile  -->
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
   <script src="js/slicknav.js"></script>
+  <script src="js/fittext.js"></script>
   <script src="js/scripts.js"></script>
 
 </body>
